# epochdb

./: .gitignore  CHANGELOG.md  README.md  benchmark.md  demo.py  example_advanced.py  example_langgraph.py  how_it_works.md  pyproject.toml
benchmarks/: adapters.py  base.py  compare.py  convomem.py  locomo.py  longmemeval.py  needle.py  run_all.py  run_benchmark.py  scalability.py
epochdb/: __init__.py  atom.py  checkpointer.py  cold_tier.py  engine.py  hot_tier.py  kg_manager.py  retrieval.py  transaction.py
examples/: __init__.py  benchmark_example.py  demo.py  example_advanced.py  example_langgraph.py
tests/: test_checkpointer.py  test_engine.py  test_relational_expansion.py  test_retrieval.py
utils/: __init__.py  shared.py
