[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epochdb"
version = "0.1.1"
description = "An agentic memory engine designed for lossless, tiered verbatim storage and multi-hop retrieval."
readme = "README.md"
license = { text = "MIT License" }
authors = [
  { name = "jersobh" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pyarrow",
    "hnswlib"
]

[project.urls]
"Homepage" = "https://github.com/jeff/epochdb"
