[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "epochdb"
version = "0.4.6"
description = "An agentic memory engine designed for lossless, tiered verbatim storage and multi-hop retrieval."
readme = "README.md"
license = { text = "MIT License" }
authors = [
  { name = "jersobh" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Core runtime dependencies only.
dependencies = [
    "numpy",
    "pyarrow",
    "hnswlib",
    "zstandard",
    "requests",
]

[project.optional-dependencies]
# Auto-embedding convenience (remember / recall_text).
embeddings = ["sentence-transformers"]

# Native LangGraph checkpointer.
langgraph = ["langgraph"]

# Install everything (recommended for most agent use-cases).
all = ["sentence-transformers", "langgraph"]

# Development tools.
dev = ["pytest", "sentence-transformers", "langgraph"]

[project.urls]
"Homepage" = "https://github.com/jersobh/epochdb"
